[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/dynamicfont.tres" type="DynamicFont" id=2]

[sub_resource type="InputEventAction" id=1]
action = "iniciar_juego"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label_Puntuacion" type="Label" parent="."]
anchor_right = 1.0
margin_top = 45.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
text = "0000"
align = 1

[node name="Label_Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -510.0
margin_top = -75.0
margin_right = 510.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "Lost in Space"
align = 1
valign = 1
autowrap = true

[node name="Button_Inicio" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -107.5
margin_top = -200.0
margin_right = 107.5
margin_bottom = -100.0
custom_fonts/font = ExtResource( 2 )
shortcut = SubResource( 2 )
text = "INICIAR"

[node name="Timer_Mensaje" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Button_Inicio" to="." method="_on_Button_Inicio_pressed"]
[connection signal="timeout" from="Timer_Mensaje" to="." method="_on_Timer_Mensaje_timeout"]
